# echomouth_bsp_test

./: CMakeLists.txt  README.md
components/bsp/: CMakeLists.txt  bsp_audio.c  bsp_battery.c  bsp_board.c  bsp_camera.c  bsp_i2c.c  bsp_lcd.c  bsp_pca9539.c
components/bsp/include/: bq27220_data_memory.h  bsp_audio.h  bsp_battery.h  bsp_board.h  bsp_camera.h  bsp_config.h  bsp_i2c.h  bsp_lcd.h  bsp_pca9539.h
main/: CMakeLists.txt  idf_component.yml  main.c
